--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 __pycache__/
 .ipynb_checkpoints
 tmp/
+01_materials/notebooks/Classification-1.ipynb
+01_materials/notebooks/Classification-2.ipynb
