--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ tmp/
 01_materials/notebooks/Classification-2.ipynb
 01_materials/notebooks/Regression-1.ipynb
 01_materials/notebooks/Regression-2.ipynb
+01_materials/notebooks/Clustering.ipynb
+01_materials/notebooks/Stat_Inference.ipynb
